--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <body class="bg-gray-50 text-gray-800">
 
     <!-- Cabeçalho e Navegação -->
-    <header id="inicio" class="bg-white shadow-md sticky top-0 z-50">
+    <section id="inicio" class="bg-white shadow-md sticky top-0 z-50">
         <div class="container mx-auto px-6 py-3 flex justify-between items-center">
             <a href="#inicio" class="text-2xl font-bold text-blue-800">
                 <i data-lucide="zap" class="inline-block mr-2"></i>Ativa
@@ -181,4 +181,5 @@
     </script>
 </body>
 </html>
+
 
