--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                     <div class="text-center p-6"><div class="text-orange-500 mx-auto mb-4"><i data-lucide="file-check-2" class="h-10 w-10 mx-auto"></i></div><h3 class="text-xl font-bold mb-2">Orçamento Grátis e Justo</h3><p class="text-gray-600">Analisamos seu projeto e oferecemos um orçamento transparente e sem compromisso.</p></div>
                     <div class="text-center p-6"><div class="text-orange-500 mx-auto mb-4"><i data-lucide="shield-check" class="h-10 w-10 mx-auto"></i></div><h3 class="text-xl font-bold mb-2">Garantia do Serviço</h3><p class="text-gray-600">Confiamos em nosso trabalho. Por isso, oferecemos garantia em todos os serviços prestados.</p></div>
                     <div class="text-center p-6"><div class="text-orange-500 mx-auto mb-4"><i data-lucide="siren" class="h-10 w-10 mx-auto"></i></div><h3 class="text-xl font-bold mb-2">Atendimento Emergencial</h3><p class="text-gray-600">Problemas elétricos não têm hora para acontecer. Conte com nosso suporte rápido.</p></div>
-                    <div class="text-center p-6"><div class="text-orange-500 mx-auto mb-4"><i data-lucide="book-check" class="h-10 w-10 mx-auto"></i></div><h3 class="text-xl font-bold mb-2">Normas ABNT</h3><p class="text-gray-600">Todos os nossos projetos e instalações seguem rigorosamente as normas técnicas da ABNT.</p></div>
+                    <div class="text-center p-6"><div class="text-orange-500 mx-auto mb-4"><i data-lucide="book-check" class="h-10 w-10 mx-auto"></i></div><h3 class="text-xl font-bold mb-2">Normas ABNT</h3><p class="text-gray-600">Todos os nossos projetos seguem rigorosamente as normas técnicas da ABNT.</p></div>
                 </div>
             </div>
         </section>
@@ -120,7 +120,7 @@
                         <!-- --- PARA ALTERAR A IMAGEM, MUDE A URL ABAIXO --- -->
                         <img src="https://placehold.co/400x400/e2e8f0/334155?text=Leandro+Oliveira" alt="Engenheiro Responsável Leandro Oliveira" class="rounded-full shadow-xl w-60 h-60 mx-auto object-cover">
                         <h3 class="text-2xl font-bold mt-6">Leandro Oliveira</h3>
-                        <p class="text-gray-500">Engenheiro Eletricista</p>
+                        <p class="text-gray-500">Engenheiro Eletricista Eletritécnico e de Automação e Controle com Pós Graduação em Automação e Controle de Processos</p>
                         <p class="text-sm text-gray-500">CREA: 123456/D</p>
                         <p class="mt-4 text-gray-600 text-sm">"Supervisiono pessoalmente cada projeto para garantir a máxima qualidade e segurança, em conformidade com todas as normas técnicas vigentes."</p>
                     </div>
@@ -181,6 +181,7 @@
     </script>
 </body>
 </html>
+
 
 
 
