--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8">
                     <div class="text-center p-6"><div class="text-orange-500 mx-auto mb-4"><i data-lucide="file-check-2" class="h-10 w-10 mx-auto"></i></div><h3 class="text-xl font-bold mb-2">Orçamento Grátis e Justo</h3><p class="text-gray-600">Analisamos seu projeto e oferecemos um orçamento transparente e sem compromisso.</p></div>
                     <div class="text-center p-6"><div class="text-orange-500 mx-auto mb-4"><i data-lucide="shield-check" class="h-10 w-10 mx-auto"></i></div><h3 class="text-xl font-bold mb-2">Garantia do Serviço</h3><p class="text-gray-600">Confiamos em nosso trabalho. Por isso, oferecemos garantia em todos os serviços prestados.</p></div>
-                    <div class="text-center p-6"><div class="text-orange-500 mx-auto mb-4"><i data-lucide="siren" class="h-10 w-10 mx-auto"></i></div><h3 class="text-xl font-bold mb-2">Atendimento Emergencial</h3><p class="text-gray-600">Problemas elétricos não têm hora para acontecer. Conte com nosso suporte rápido.</p></div>
+                    <div class="text-center p-6"><div class="text-orange-500 mx-auto mb-4"><i data-lucide="siren" class="h-10 w-10 mx-auto"></i></div><h3 class="text-xl font-bold mb-2">Atendimento Emergencial</h3><p class="text-gray-600">Conte com nosso suporte rápido.</p></div>
                     <div class="text-center p-6"><div class="text-orange-500 mx-auto mb-4"><i data-lucide="book-check" class="h-10 w-10 mx-auto"></i></div><h3 class="text-xl font-bold mb-2">Normas ABNT</h3><p class="text-gray-600">Todos os nossos projetos seguem rigorosamente as normas técnicas da ABNT.</p></div>
                 </div>
             </div>
@@ -121,15 +121,15 @@
                         <img src="https://placehold.co/400x400/e2e8f0/334155?text=Leandro+Oliveira" alt="Engenheiro Responsável Leandro Oliveira" class="rounded-full shadow-xl w-60 h-60 mx-auto object-cover">
                         <h3 class="text-2xl font-bold mt-6">Leandro Oliveira</h3>
                         <p class="text-gray-500">Engenheiro Eletricista Eletritécnico e de Automação e Controle com Pós Graduação em Automação e Controle de Processos</p>
-                        <p class="text-sm text-gray-500">CREA: 123456/D</p>
-                        <p class="mt-4 text-gray-600 text-sm">"Supervisiono pessoalmente cada projeto para garantir a máxima qualidade e segurança, em conformidade com todas as normas técnicas vigentes."</p>
+                        <p class="text-sm text-gray-500">CREA:051811021-4 /D</p>
+                        <p class="mt-4 text-gray-600 text-sm">"Elaboro pessoalmente cada projeto para garantir a máxima qualidade e segurança, em conformidade com todas as normas técnicas vigentes."</p>
                     </div>
                     <div class="md:w-2/3">
-                        <h2 class="text-3xl md:text-4xl font-bold text-gray-900 mb-4">Compromisso com a Sua Segurança</h2>
-                        <p class="text-gray-600 mb-6">Fundada em 2019, a Ativa nasceu da paixão por eletricidade e do compromisso em oferecer serviços seguros e de alta qualidade. Com anos de experiência no mercado, nossa equipe de eletricistas certificados, liderada pelo engenheiro responsável Leandro Oliveira, está pronta para lidar com qualquer desafio.</p>
+                        <h2 class="text-3xl md:text-4xl font-bold text-gray-900 mb-4">Compromisso com suas demandas!</h2>
+                        <p class="text-gray-600 mb-6">Fundada em 2019, a Ativa nasceu com o objetivo de transformar projetos em realidade! Com o compromisso em oferecer serviços seguros e de excelência. Com anos de experiência no mercado, nossa equipe de projetistas de excelência, liderada pelo engenheiro responsável Eng Leandro Oliveira, está pronta para lidar com qualquer desafio!</p>
                         <div class="space-y-4">
-                            <div class="flex items-start"><div class="bg-green-100 text-green-600 rounded-full h-8 w-8 flex-shrink-0 flex items-center justify-center mr-4 mt-1"><i data-lucide="award" class="h-5 w-5"></i></div><div><h4 class="font-bold">Qualidade Garantida</h4><p class="text-gray-600">Utilizamos apenas materiais de primeira linha e seguimos rigorosamente as normas técnicas.</p></div></div>
-                            <div class="flex items-start"><div class="bg-green-100 text-green-600 rounded-full h-8 w-8 flex-shrink-0 flex items-center justify-center mr-4 mt-1"><i data-lucide="users" class="h-5 w-5"></i></div><div><h4 class="font-bold">Profissionalismo</h4><p class="text-gray-600">Nossa equipe é pontual, organizada e trata seu imóvel com o máximo de respeito e limpeza.</p></div></div>
+                            <div class="flex items-start"><div class="bg-green-100 text-green-600 rounded-full h-8 w-8 flex-shrink-0 flex items-center justify-center mr-4 mt-1"><i data-lucide="award" class="h-5 w-5"></i></div><div><h4 class="font-bold">Qualidade Garantida</h4><p class="text-gray-600"> </p></div></div>
+                            <div class="flex items-start"><div class="bg-green-100 text-green-600 rounded-full h-8 w-8 flex-shrink-0 flex items-center justify-center mr-4 mt-1"><i data-lucide="users" class="h-5 w-5"></i></div><div><h4 class="font-bold">Profissionalismo</h4><p class="text-gray-600"> </p></div></div>
                         </div>
                     </div>
                 </div>
@@ -162,7 +162,7 @@
                     <a href="#" class="text-gray-400 hover:text-white"><i data-lucide="facebook"></i></a>
                     <a href="#" class="text-gray-400 hover:text-white"><i data-lucide="linkedin"></i></a>
                 </div>
-                <p class="text-gray-500">&copy; <span id="year"></span> Ativa Soluções Elétricas. Todos os direitos reservados.</p>
+                <p class="text-gray-500">&copy; <span id="year"></span> Ativa Soluções Em Energia. Todos os direitos reservados.</p>
             </div>
         </div>
     </footer>
@@ -181,6 +181,7 @@
     </script>
 </body>
 </html>
+
 
 
 
