--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
         <!-- Seção Hero -->
         <section class="hero-bg text-white">
             <div class="container mx-auto px-6 py-20 md:py-28 text-center">
-                <h1 class="text-4xl md:text-5xl font-bold leading-tight mb-4">Especialistas em Serviços Elétricos</h1>
-                <p class="text-lg md:text-xl text-gray-300 mb-8 max-w-3xl mx-auto">Segurança, qualidade e eficiência em cada projeto. Eletricistas certificados para garantir o melhor serviço.</p>
+                <h1 class="text-4xl md:text-5xl font-bold leading-tight mb-4">Especialista Em Projetos de Instalações Elétricas</h1>
+                <p class="text-lg md:text-xl text-gray-300 mb-8 max-w-3xl mx-auto">Segurança, qualidade e eficiência em cada projeto. Eletricista certificados para garantir o melhor serviço.</p>
                 <a href="#servicos" class="bg-blue-600 text-white font-bold py-3 px-8 rounded-lg text-lg hover:bg-blue-700 transition duration-300">
                     Conheça Nossos Serviços
                 </a>
@@ -121,7 +121,7 @@
                         <img src="https://placehold.co/400x400/e2e8f0/334155?text=Leandro+Oliveira" alt="Engenheiro Responsável Leandro Oliveira" class="rounded-full shadow-xl w-60 h-60 mx-auto object-cover">
                         <h3 class="text-2xl font-bold mt-6">Leandro Oliveira</h3>
                         <p class="text-gray-500">Engenheiro Eletricista Eletritécnico e de Automação e Controle com Pós Graduação em Automação e Controle de Processos</p>
-                        <p class="text-sm text-gray-500">CREA:051811021-4 /D</p>
+                        <p class="text-sm text-gray-500">CREA:051811021-4 </p>
                         <p class="mt-4 text-gray-600 text-sm">"Elaboro pessoalmente cada projeto para garantir a máxima qualidade e segurança, em conformidade com todas as normas técnicas vigentes."</p>
                     </div>
                     <div class="md:w-2/3">
@@ -181,6 +181,7 @@
     </script>
 </body>
 </html>
+
 
 
 
