--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         <section class="hero-bg text-white">
             <div class="container mx-auto px-6 py-20 md:py-28 text-center">
                 <h1 class="text-4xl md:text-5xl font-bold leading-tight mb-4">Especialista Em Projetos de Instalações Elétricas</h1>
-                <p class="text-lg md:text-xl text-gray-300 mb-8 max-w-3xl mx-auto">Segurança, qualidade e eficiência em cada projeto. Eletricista certificados para garantir o melhor serviço.</p>
+                <p class="text-lg md:text-xl text-gray-300 mb-8 max-w-3xl mx-auto">Segurança, qualidade e eficiência em cada projeto. Engenheiro qualificado para guiar seu empreendimento.</p>
                 <a href="#servicos" class="bg-blue-600 text-white font-bold py-3 px-8 rounded-lg text-lg hover:bg-blue-700 transition duration-300">
                     Conheça Nossos Serviços
                 </a>
@@ -181,6 +181,7 @@
     </script>
 </body>
 </html>
+
 
 
 
