--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <!-- Seção Hero -->
         <section class="hero-bg text-white">
             <div class="container mx-auto px-6 py-20 md:py-28 text-center">
-                <h1 class="text-4xl md:text-5xl font-bold leading-tight mb-4">Especialista Em Projetos de Instalações Elétricas</h1>
+                <h1 class="text-4xl md:text-5xl font-bold leading-tight mb-4">Projetos de Instalações Elétricas</h1>
                 <p class="text-lg md:text-xl text-gray-300 mb-8 max-w-3xl mx-auto">Segurança, qualidade e eficiência em cada projeto. Engenheiro qualificado para guiar seu empreendimento.</p>
                 <a href="#servicos" class="bg-blue-600 text-white font-bold py-3 px-8 rounded-lg text-lg hover:bg-blue-700 transition duration-300">
                     Conheça Nossos Serviços
@@ -79,7 +79,7 @@
             <div class="container mx-auto px-6">
                 <div class="text-center mb-10">
                     <h2 class="text-3xl md:text-4xl font-bold text-gray-900">Nossos Serviços</h2>
-                    <p class="text-gray-600 mt-2">Do projeto à manutenção, temos a solução completa para você.</p>
+                    <p class="text-gray-600 mt-2">Da consultoria ao projeto, temos a solução completa para você.</p>
                 </div>
 
                 <!-- Detalhes dos Serviços -->
@@ -181,6 +181,7 @@
     </script>
 </body>
 </html>
+
 
 
 
