--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                     <div class="bg-gray-50 p-6 rounded-lg shadow-lg hover:shadow-xl hover:-translate-y-2 transition-all duration-300 text-center"><div class="bg-blue-100 text-blue-600 rounded-full h-16 w-16 flex items-center justify-center mb-6 mx-auto"><i data-lucide="transmission-tower" class="h-8 w-8"></i></div><h3 class="text-xl font-bold mb-3">Subestação Aérea</h3><p class="text-gray-600">Projeto de subestação aérea com todo detalhamento necessário, bem como toda a tratativa com a distribuidora.</p></div>
                     <div class="bg-gray-50 p-6 rounded-lg shadow-lg hover:shadow-xl hover:-translate-y-2 transition-all duration-300 text-center"><div class="bg-blue-100 text-blue-600 rounded-full h-16 w-16 flex items-center justify-center mb-6 mx-auto"><i data-lucide="station" class="h-8 w-8"></i></div><h3 class="text-xl font-bold mb-3">Subestação Abrigada</h3><p class="text-gray-600">Projeto e adequação de subestação abrigada em alvenaria, seguindo todas as normas técnicas.</p></div>
                     <div class="bg-gray-50 p-6 rounded-lg shadow-lg hover:shadow-xl hover:-translate-y-2 transition-all duration-300 text-center"><div class="bg-blue-100 text-blue-600 rounded-full h-16 w-16 flex items-center justify-center mb-6 mx-auto"><i data-lucide="blocks" class="h-8 w-8"></i></div><h3 class="text-xl font-bold mb-3">Padrão de Múltiplas Unidades</h3><p class="text-gray-600">Projeto de centros de medição para condomínios e edifícios comerciais e residenciais.</p></div>
-                    <div class="bg-gray-50 p-6 rounded-lg shadow-lg hover:shadow-xl hover:-translate-y-2 transition-all duration-300 text-center"><div class="bg-blue-100 text-blue-600 rounded-full h-16 w-16 flex items-center justify-center mb-6 mx-auto"><i data-lucide="cloud-lightning" class="h-8 w-8"></i></div><h3 class="text-xl font-bold mb-3">SPDA</h3><p class="text-gray-600">Projeto de Sistemas de Proteção contra Descargas Atmosféricas (para-raios).</p></div>
+                    <div class="bg-gray-50 p-6 rounded-lg shadow-lg hover:shadow-xl hover:-translate-y-2 transition-all duration-300 text-center"><div class="bg-blue-100 text-blue-600 rounded-full h-16 w-16 flex items-center justify-center mb-6 mx-auto"><i data-lucide="cloud-lightning" class="h-8 w-8"></i></div><h3 class="text-xl font-bold mb-3">SPDA</h3><p class="text-gray-600">Projeto de sistemas de proteção contra descargas Atmosféricas (para-raios).</p></div>
                     <div class="bg-gray-50 p-6 rounded-lg shadow-lg hover:shadow-xl hover:-translate-y-2 transition-all duration-300 text-center"><div class="bg-blue-100 text-blue-600 rounded-full h-16 w-16 flex items-center justify-center mb-6 mx-auto"><i data-lucide="gauge-circle" class="h-8 w-8"></i></div><h3 class="text-xl font-bold mb-3">Padrão Trifásico e ART</h3><p class="text-gray-600">Cálculo de demanda, projeto e execução com emissão de Anotação de Responsabilidade Técnica.</p></div>
                     <div class="bg-gray-50 p-6 rounded-lg shadow-lg hover:shadow-xl hover:-translate-y-2 transition-all duration-300 text-center"><div class="bg-blue-100 text-blue-600 rounded-full h-16 w-16 flex items-center justify-center mb-6 mx-auto"><i data-lucide="wifi" class="h-8 w-8"></i></div><h3 class="text-xl font-bold mb-3">Projeto de RTA</h3><p class="text-gray-600">Projetos de rede cabeada, Wi-Fi, telefonia e antenas para máxima conectividade.</p></div>
                 </div>
@@ -126,7 +126,7 @@
                     </div>
                     <div class="md:w-2/3">
                         <h2 class="text-3xl md:text-4xl font-bold text-gray-900 mb-4">Compromisso com suas demandas!</h2>
-                        <p class="text-gray-600 mb-6">Fundada em 2019, a Ativa nasceu com o objetivo de transformar projetos em realidade! Com o compromisso em oferecer serviços seguros e de excelência. Com anos de experiência no mercado, nossa equipe de projetistas de excelência, liderada pelo engenheiro responsável Eng Leandro Oliveira, está pronta para lidar com qualquer desafio!</p>
+                        <p class="text-gray-600 mb-6">Fundada em 2019, a Ativa nasceu com o objetivo de transformar projetos em realidade! Com o compromisso em oferecer serviços seguros e de excelência. Com anos de experiência no mercado, nossa equipe de projetistas de excelência, liderada pelo engenheiro responsável Leandro Oliveira, está pronta para lidar com qualquer desafio!</p>
                         <div class="space-y-4">
                             <div class="flex items-start"><div class="bg-green-100 text-green-600 rounded-full h-8 w-8 flex-shrink-0 flex items-center justify-center mr-4 mt-1"><i data-lucide="award" class="h-5 w-5"></i></div><div><h4 class="font-bold">Qualidade Garantida</h4><p class="text-gray-600"> </p></div></div>
                             <div class="flex items-start"><div class="bg-green-100 text-green-600 rounded-full h-8 w-8 flex-shrink-0 flex items-center justify-center mr-4 mt-1"><i data-lucide="users" class="h-5 w-5"></i></div><div><h4 class="font-bold">Profissionalismo</h4><p class="text-gray-600"> </p></div></div>
@@ -181,6 +181,7 @@
     </script>
 </body>
 </html>
+
 
 
 
