--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                     </div>
                     <div class="md:w-2/3">
                         <h2 class="text-3xl md:text-4xl font-bold text-gray-900 mb-4">Compromisso com suas demandas!</h2>
-                        <p class="text-gray-600 mb-6">Fundada em 2019, a Ativa nasceu com o objetivo de transformar projetos em realidade! Com o compromisso em oferecer serviços seguros e de excelência. Com anos de experiência no mercado, nossa equipe de projetistas de excelência, liderada pelo engenheiro responsável Leandro Oliveira, está pronta para lidar com qualquer desafio!</p>
+                        <p class="text-gray-600 mb-6">Fundada em 2019, a Ativa nasceu com o objetivo de transformar projetos em realidade! Com o compromisso em oferecer serviços seguros e de excelência. Com anos de experiência no mercado, nossa equipe de projetistas de excelência, liderada pelo engenheiro eletricista responsável Leandro Oliveira, está pronta para lidar com qualquer desafio!</p>
                         <div class="space-y-4">
                             <div class="flex items-start"><div class="bg-green-100 text-green-600 rounded-full h-8 w-8 flex-shrink-0 flex items-center justify-center mr-4 mt-1"><i data-lucide="award" class="h-5 w-5"></i></div><div><h4 class="font-bold">Qualidade Garantida</h4><p class="text-gray-600"> </p></div></div>
                             <div class="flex items-start"><div class="bg-green-100 text-green-600 rounded-full h-8 w-8 flex-shrink-0 flex items-center justify-center mr-4 mt-1"><i data-lucide="users" class="h-5 w-5"></i></div><div><h4 class="font-bold">Profissionalismo</h4><p class="text-gray-600"> </p></div></div>
@@ -180,6 +180,7 @@
     </script>
 </body>
 </html>
+
 
 
 
