--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
                     <p class="text-gray-600 mt-2">Nossos diferenciais garantem a sua total satisfação e segurança.</p>
                 </div>
                 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-8">
+                    </div>
                     <div class="text-center p-6"><div class="text-orange-500 mx-auto mb-4"><i data-lucide="file-check-2" class="h-10 w-10 mx-auto"></i></div><h3 class="text-xl font-bold mb-2">Orçamento Grátis e Justo</h3><p class="text-gray-600">Analisamos seu projeto e oferecemos um orçamento transparente e sem compromisso.</p></div>
                     <div class="text-center p-6"><div class="text-orange-500 mx-auto mb-4"><i data-lucide="shield-check" class="h-10 w-10 mx-auto"></i></div><h3 class="text-xl font-bold mb-2">Garantia do Serviço</h3><p class="text-gray-600">Confiamos em nosso trabalho. Por isso, oferecemos garantia em todos os serviços prestados.</p></div>
                     <div class="text-center p-6"><div class="text-orange-500 mx-auto mb-4"><i data-lucide="book-check" class="h-10 w-10 mx-auto"></i></div><h3 class="text-xl font-bold mb-2">Normas ABNT</h3><p class="text-gray-600">Todos os nossos projetos seguem rigorosamente as normas técnicas da ABNT.</p></div>
@@ -180,6 +181,7 @@
     </script>
 </body>
 </html>
+
 
 
 
