--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         }
         .hero-bg {
             /* --- PARA ALTERAR A IMAGEM DE FUNDO, MUDE A URL ABAIXO --- */
-            background-image: linear-gradient(to right, rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.5)), url('https://placehold.co/1920x1080/1a202c/ffffff?text=Sua+Imagem+Aqui');
+            background-image:url('Ativa_fundo transparente_Prancheta 1.png'); 
             background-size: cover;
             background-position: center;
         }
@@ -181,6 +181,7 @@
     </script>
 </body>
 </html>
+
 
 
 
