--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
     <main>
         <!-- Seção Hero -->
-        <section class="hero-bg text-yellow">
+        <section class="hero-bg text-white">
             <div class="container mx-auto px-6 py-20 md:py-28 text-center">
                 <h1 class="text-4xl md:text-5xl font-bold leading-tight mb-4">Projetos de Instalações Elétricas</h1>
                 <p class="text-lg md:text-xl text-gray-300 mb-8 max-w-3xl mx-auto">Segurança, qualidade e eficiência em cada projeto. Engenheiro qualificado para guiar seu empreendimento.</p>
@@ -181,6 +181,7 @@
     </script>
 </body>
 </html>
+
 
 
 
