--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                 <div class="flex flex-col md:flex-row items-center gap-10">
                     <div class="md:w-1/3 text-center">
                         <!-- --- PARA ALTERAR A IMAGEM, MUDE A URL ABAIXO --- -->
-                        <background-image: url('WhatsApp Image 2025-08-05 at 22.00.05.jpeg');
+                        <img src="WhatsApp Image 2025-08-05 at 22.00.05.jpeg" alt="Engenheiro Responsável Leandro Oliveira" class="rounded-full shadow-xl w-60 h-60 mx-auto object-cover">
                         <h3 class="text-2xl font-bold mt-6">Leandro Oliveira</h3>
                         <p class="text-gray-500">Engenheiro Eletricista Eletrotécnico e de Automação e Controle formado pelo IFBA (Instituto Federal da Bahia) com Pós Graduação em Automação e Controle de Processos pela UFV (Universidade Federal de Viçosa)</p>
                         <p class="text-sm text-gray-500">CREA:051811021-4 </p>
@@ -181,6 +181,7 @@
     </script>
 </body>
 </html>
+
 
 
 
