--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         }
         .hero-bg {
             /* --- PARA ALTERAR A IMAGEM DE FUNDO, MUDE A URL ABAIXO --- */
-            background-image:url('Ativa_fundo transparente_Prancheta 1.png'); 
+            background-image:url('Ativa2_fundo transparente_Prancheta 1.png'); 
             background-size: cover;
             background-position: center;
         }
@@ -181,6 +181,7 @@
     </script>
 </body>
 </html>
+
 
 
 
